--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,36 @@
 {
-  "Success": "True",
-  "Message" :  "Cadastrado com sucesso"
+  "InsertUserSuccess": {
+    "Password": "secretpassword",
+    "Email": "user@example.com",
+    "Phone": "123-456-7890",
+    "NickName": "john_doe"
+  },
+  "InsertUserErrorWhenExistEmail": [
+    {
+      "Email": "user1@example.com",
+      "NickName": "john_doe1",
+      "Password": "secretpassword1",
+      "Phone": "123-456-78901"
+    },
+    {
+      "Email": "user1@example.com",
+      "NickName": "john_doe2",
+      "Password": "secretpassword2",
+      "Phone": "123-456-78902"
+    }
+  ],
+  "InsertUserErrorWhenExistPhone": [
+    {
+      "Email": "user4@example.com",
+      "NickName": "john_doe1",
+      "Password": "secretpassword1",
+      "Phone": "123-456-78904"
+    },
+    {
+      "Email": "user5@example.com",
+      "NickName": "john_doe2",
+      "Password": "secretpassword2",
+      "Phone": "123-456-78904"
+    }
+  ]
 }
